--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
 
-    </head>
+</html>
     <body>
-        
+        <h1>Lorem, ipsum dolor.
+
+        </h1>
+        <a>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, explicabo.</a>
     </body>
 
 </html>
